--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-cayman
+title: "Asmaa Nasr | Data Science Portfolio"
+description: "Welcome to my portfolio! I specialize in Data Science and Machine Learning."
+theme: jekyll-theme-cayman  # You can change this theme
